// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Card /> should render a Card with Footer 1`] = `
<View
  style={
    {
      "flex": 1,
    }
  }
>
  <View
    borderRadius="medium"
    data-blade-component="card"
    display="block"
    isFocused={false}
    isSelected={false}
    style={
      [
        {
          "borderRadius": 4,
          "display": "block",
        },
        {
          "borderColor": "transparent",
          "borderStyle": "solid",
          "borderWidth": 2,
        },
      ]
    }
  >
    <View
      backgroundColor="surface.background.gray.intense"
      borderRadius="medium"
      data-blade-component="base-box"
      elevation="lowRaised"
      style={
        [
          {
            "backgroundColor": "hsla(0, 0%, 100%, 1)",
            "borderRadius": 4,
            "paddingBottom": 24,
            "paddingLeft": 24,
            "paddingRight": 24,
            "paddingTop": 24,
            "textAlign": "left",
          },
          {
            "elevation": 8,
            "shadowColor": "hsla(217, 56%, 17%, 0.4)",
            "shadowOffset": {
              "height": 2,
              "width": 0,
            },
            "shadowOpacity": 0.2,
            "shadowRadius": 4,
          },
          [
            {
              "display": "flex",
              "flexDirection": "column",
              "width": "100%",
            },
          ],
        ]
      }
      textAlign="left"
    >
      <View
        data-blade-component="card-body"
        style={
          [
            {},
          ]
        }
      >
        <Text
          accessible={true}
          color="surface.text.gray.normal"
          data-blade-component="text"
          fontFamily="text"
          fontSize={100}
          fontStyle="normal"
          fontWeight="regular"
          lineHeight={100}
          style={
            [
              {
                "color": "hsla(212, 39%, 16%, 1)",
                "fontFamily": "Inter",
                "fontSize": 14,
                "fontStyle": "normal",
                "fontWeight": "400",
                "letterSpacing": 0,
                "lineHeight": 20,
                "marginBottom": 0,
                "marginLeft": 0,
                "marginRight": 0,
                "marginTop": 0,
                "paddingBottom": 0,
                "paddingLeft": 0,
                "paddingRight": 0,
                "paddingTop": 0,
                "textDecorationLine": "none",
              },
            ]
          }
        >
          Plain Card
        </Text>
      </View>
      <View
        data-blade-component="card-footer"
        style={
          [
            {
              "marginTop": 12,
            },
          ]
        }
      >
        <View
          borderBottomColor="surface.border.gray.muted"
          borderPosition="borderBottom"
          data-blade-component="divider"
          dividerStyle="solid"
          isDividerHorizontal={true}
          style={
            [
              {
                "borderBottomColor": "hsla(211, 20%, 52%, 0.18)",
                "borderBottomStyle": "solid",
              },
              {
                "borderBottomStyle": "solid",
                "borderBottomWidth": 1,
                "borderWidth": 0,
                "flexGrow": 1,
              },
            ]
          }
          thickness="thin"
        />
        <View
          alignItems="stretch"
          data-blade-component="base-box"
          display="flex"
          flexDirection="column"
          justifyContent="space-between"
          style={
            [
              {
                "alignItems": "stretch",
                "display": "flex",
                "flexDirection": "column",
                "justifyContent": "space-between",
                "paddingTop": 12,
              },
            ]
          }
        >
          <View
            data-blade-component="base-box"
            style={
              [
                {
                  "textAlign": "left",
                },
              ]
            }
            textAlign="left"
          >
            <Text
              accessible={true}
              color="surface.text.gray.normal"
              data-blade-component="text"
              fontFamily="text"
              fontSize={100}
              fontStyle="normal"
              fontWeight="semibold"
              lineHeight={100}
              style={
                [
                  {
                    "color": "hsla(212, 39%, 16%, 1)",
                    "fontFamily": "Inter",
                    "fontSize": 14,
                    "fontStyle": "normal",
                    "fontWeight": "600",
                    "letterSpacing": 0,
                    "lineHeight": 20,
                    "marginBottom": 0,
                    "marginLeft": 0,
                    "marginRight": 0,
                    "marginTop": 0,
                    "paddingBottom": 0,
                    "paddingLeft": 0,
                    "paddingRight": 0,
                    "paddingTop": 0,
                    "textDecorationLine": "none",
                  },
                ]
              }
            >
              Card Header
            </Text>
            <Text
              accessible={true}
              color="surface.text.gray.subtle"
              data-blade-component="text"
              fontFamily="text"
              fontSize={75}
              fontStyle="normal"
              fontWeight="regular"
              lineHeight={75}
              style={
                [
                  {
                    "color": "hsla(211, 26%, 34%, 1)",
                    "fontFamily": "Inter",
                    "fontSize": 12,
                    "fontStyle": "normal",
                    "fontWeight": "400",
                    "letterSpacing": 0,
                    "lineHeight": 18,
                    "marginBottom": 0,
                    "marginLeft": 0,
                    "marginRight": 0,
                    "marginTop": 0,
                    "paddingBottom": 0,
                    "paddingLeft": 0,
                    "paddingRight": 0,
                    "paddingTop": 0,
                    "textDecorationLine": "none",
                  },
                ]
              }
            >
              Card subtitle
            </Text>
          </View>
          <View
            alignSelf="auto"
            data-blade-component="base-box"
            display="flex"
            flexDirection="row"
            style={
              [
                {
                  "alignSelf": "auto",
                  "display": "flex",
                  "flexDirection": "row",
                  "marginLeft": 0,
                  "marginTop": 16,
                },
              ]
            }
          >
            <View
              data-blade-component="base-box"
              flexGrow={1}
              style={
                [
                  {
                    "flexGrow": 1,
                  },
                ]
              }
            >
              <View
                accessibilityRole="button"
                accessibilityState={
                  {
                    "busy": undefined,
                    "checked": undefined,
                    "disabled": false,
                    "expanded": undefined,
                    "selected": undefined,
                  }
                }
                accessibilityValue={
                  {
                    "max": undefined,
                    "min": undefined,
                    "now": undefined,
                    "text": undefined,
                  }
                }
                accessible={true}
                borderRadius="4px"
                borderWidth="1px"
                buttonPaddingBottom="0px"
                buttonPaddingLeft="20px"
                buttonPaddingRight="20px"
                buttonPaddingTop="0px"
                collapsable={false}
                data-blade-component="button"
                defaultBackgroundColor="hsla(0, 0%, 100%, 0)"
                defaultBorderColor="hsla(227, 100%, 59%, 1)"
                focusBackgroundColor="hsla(227, 100%, 59%, 0.09)"
                focusBorderColor="hsla(227, 100%, 59%, 1)"
                focusRingColor="hsla(227, 100%, 59%, 0.18)"
                focusable={true}
                hoverBackgroundColor="hsla(227, 100%, 59%, 0.09)"
                hoverBorderColor="hsla(227, 100%, 59%, 1)"
                isFullWidth={true}
                isLoading={false}
                isPressed={false}
                minHeight="36px"
                motionDuration="duration.xquick"
                motionEasing="easing.standard"
                onBlur={[Function]}
                onClick={[Function]}
                onFocus={[Function]}
                onKeyUp={[Function]}
                onMouseDown={[Function]}
                onMouseOut={[Function]}
                onMouseUp={[Function]}
                onResponderGrant={[Function]}
                onResponderMove={[Function]}
                onResponderRelease={[Function]}
                onResponderTerminate={[Function]}
                onResponderTerminationRequest={[Function]}
                onStartShouldSetResponder={[Function]}
                onTouchEnd={[Function]}
                onTouchStart={[Function]}
                role="button"
                style={
                  [
                    {
                      "alignItems": "center",
                      "alignSelf": "center",
                      "backgroundColor": "hsla(0, 0%, 100%, 0)",
                      "borderColor": "hsla(227, 100%, 59%, 1)",
                      "borderRadius": 4,
                      "borderStyle": "solid",
                      "borderWidth": 1,
                      "cursor": "pointer",
                      "display": "flex",
                      "flexDirection": "row",
                      "justifyContent": "center",
                      "minHeight": 36,
                      "overflow": "hidden",
                      "paddingBottom": 0,
                      "paddingLeft": 20,
                      "paddingRight": 20,
                      "paddingTop": 0,
                      "textDecorationColor": "black",
                      "textDecorationLine": "none",
                      "textDecorationStyle": "solid",
                      "width": "100%",
                    },
                    {
                      "backgroundColor": "hsla(0, 0%, 100%, 0)",
                      "borderColor": "hsla(227, 100%, 59%, 1)",
                    },
                  ]
                }
                type="button"
              >
                <View
                  style={
                    {
                      "transform": [
                        {
                          "scale": 1,
                        },
                      ],
                    }
                  }
                >
                  <View
                    alignItems="center"
                    data-blade-component="base-box"
                    display="flex"
                    flexDirection="row"
                    isHidden={false}
                    justifyContent="center"
                    style={
                      [
                        {
                          "alignItems": "center",
                          "display": "flex",
                          "flexBasis": 0,
                          "flexDirection": "row",
                          "flexGrow": 1,
                          "flexShrink": 1,
                          "justifyContent": "center",
                          "zIndex": 1,
                        },
                        {
                          "opacity": 1,
                        },
                      ]
                    }
                    zIndex={1}
                  >
                    <Text
                      accessible={true}
                      color="interactive.text.primary.subtle"
                      data-blade-component="base-text"
                      fontSize={100}
                      fontWeight="medium"
                      lineHeight={100}
                      style={
                        [
                          {
                            "color": "hsla(227, 100%, 59%, 1)",
                            "fontFamily": "Inter",
                            "fontSize": 14,
                            "fontStyle": "normal",
                            "fontWeight": "500",
                            "letterSpacing": 0,
                            "lineHeight": 20,
                            "marginBottom": 0,
                            "marginLeft": 0,
                            "marginRight": 0,
                            "marginTop": 0,
                            "paddingBottom": 0,
                            "paddingLeft": 0,
                            "paddingRight": 0,
                            "paddingTop": 0,
                            "textAlign": "center",
                            "textDecorationLine": "none",
                          },
                        ]
                      }
                      textAlign="center"
                    >
                      Delete
                    </Text>
                  </View>
                </View>
              </View>
            </View>
            <View
              data-blade-component="base-box"
              style={
                [
                  {
                    "marginLeft": 16,
                  },
                ]
              }
            />
            <View
              data-blade-component="base-box"
              flexGrow={1}
              style={
                [
                  {
                    "flexGrow": 1,
                  },
                ]
              }
            >
              <View
                accessibilityRole="button"
                accessibilityState={
                  {
                    "busy": undefined,
                    "checked": undefined,
                    "disabled": false,
                    "expanded": undefined,
                    "selected": undefined,
                  }
                }
                accessibilityValue={
                  {
                    "max": undefined,
                    "min": undefined,
                    "now": undefined,
                    "text": undefined,
                  }
                }
                accessible={true}
                borderRadius="4px"
                borderWidth="0px"
                buttonPaddingBottom="0px"
                buttonPaddingLeft="20px"
                buttonPaddingRight="20px"
                buttonPaddingTop="0px"
                collapsable={false}
                data-blade-component="button"
                defaultBackgroundColor="hsla(227, 100%, 59%, 1)"
                defaultBorderColor="hsla(227, 100%, 59%, 1)"
                focusBackgroundColor="hsla(227, 71%, 51%, 1)"
                focusBorderColor="hsla(227, 100%, 59%, 1)"
                focusRingColor="hsla(227, 100%, 59%, 0.18)"
                focusable={true}
                hoverBackgroundColor="hsla(227, 71%, 51%, 1)"
                hoverBorderColor="hsla(227, 100%, 59%, 1)"
                isFullWidth={true}
                isLoading={false}
                isPressed={false}
                minHeight="36px"
                motionDuration="duration.xquick"
                motionEasing="easing.standard"
                onBlur={[Function]}
                onClick={[Function]}
                onFocus={[Function]}
                onKeyUp={[Function]}
                onMouseDown={[Function]}
                onMouseOut={[Function]}
                onMouseUp={[Function]}
                onResponderGrant={[Function]}
                onResponderMove={[Function]}
                onResponderRelease={[Function]}
                onResponderTerminate={[Function]}
                onResponderTerminationRequest={[Function]}
                onStartShouldSetResponder={[Function]}
                onTouchEnd={[Function]}
                onTouchStart={[Function]}
                role="button"
                style={
                  [
                    {
                      "alignItems": "center",
                      "alignSelf": "center",
                      "backgroundColor": "hsla(227, 100%, 59%, 1)",
                      "borderColor": "hsla(227, 100%, 59%, 1)",
                      "borderRadius": 4,
                      "borderStyle": "solid",
                      "borderWidth": 0,
                      "cursor": "pointer",
                      "display": "flex",
                      "flexDirection": "row",
                      "justifyContent": "center",
                      "minHeight": 36,
                      "overflow": "hidden",
                      "paddingBottom": 0,
                      "paddingLeft": 20,
                      "paddingRight": 20,
                      "paddingTop": 0,
                      "textDecorationColor": "black",
                      "textDecorationLine": "none",
                      "textDecorationStyle": "solid",
                      "width": "100%",
                    },
                    {
                      "backgroundColor": "hsla(227, 100%, 59%, 1)",
                      "borderColor": "hsla(227, 100%, 59%, 1)",
                    },
                  ]
                }
                type="button"
              >
                <View
                  style={
                    {
                      "transform": [
                        {
                          "scale": 1,
                        },
                      ],
                    }
                  }
                >
                  <View
                    alignItems="center"
                    data-blade-component="base-box"
                    display="flex"
                    flexDirection="row"
                    isHidden={false}
                    justifyContent="center"
                    style={
                      [
                        {
                          "alignItems": "center",
                          "display": "flex",
                          "flexBasis": 0,
                          "flexDirection": "row",
                          "flexGrow": 1,
                          "flexShrink": 1,
                          "justifyContent": "center",
                          "zIndex": 1,
                        },
                        {
                          "opacity": 1,
                        },
                      ]
                    }
                    zIndex={1}
                  >
                    <Text
                      accessible={true}
                      color="interactive.text.onPrimary.normal"
                      data-blade-component="base-text"
                      fontSize={100}
                      fontWeight="medium"
                      lineHeight={100}
                      style={
                        [
                          {
                            "color": "hsla(0, 0%, 100%, 1)",
                            "fontFamily": "Inter",
                            "fontSize": 14,
                            "fontStyle": "normal",
                            "fontWeight": "500",
                            "letterSpacing": 0,
                            "lineHeight": 20,
                            "marginBottom": 0,
                            "marginLeft": 0,
                            "marginRight": 0,
                            "marginTop": 0,
                            "paddingBottom": 0,
                            "paddingLeft": 0,
                            "paddingRight": 0,
                            "paddingTop": 0,
                            "textAlign": "center",
                            "textDecorationLine": "none",
                          },
                        ]
                      }
                      textAlign="center"
                    >
                      Save
                    </Text>
                  </View>
                </View>
              </View>
            </View>
          </View>
        </View>
      </View>
    </View>
  </View>
</View>
`;

exports[`<Card /> should render a Card with Header 1`] = `
<View
  style={
    {
      "flex": 1,
    }
  }
>
  <View
    borderRadius="medium"
    data-blade-component="card"
    display="block"
    isFocused={false}
    isSelected={false}
    style={
      [
        {
          "borderRadius": 4,
          "display": "block",
        },
        {
          "borderColor": "transparent",
          "borderStyle": "solid",
          "borderWidth": 2,
        },
      ]
    }
  >
    <View
      backgroundColor="surface.background.gray.intense"
      borderRadius="medium"
      data-blade-component="base-box"
      elevation="lowRaised"
      style={
        [
          {
            "backgroundColor": "hsla(0, 0%, 100%, 1)",
            "borderRadius": 4,
            "paddingBottom": 24,
            "paddingLeft": 24,
            "paddingRight": 24,
            "paddingTop": 24,
            "textAlign": "left",
          },
          {
            "elevation": 8,
            "shadowColor": "hsla(217, 56%, 17%, 0.4)",
            "shadowOffset": {
              "height": 2,
              "width": 0,
            },
            "shadowOpacity": 0.2,
            "shadowRadius": 4,
          },
          [
            {
              "display": "flex",
              "flexDirection": "column",
              "width": "100%",
            },
          ],
        ]
      }
      textAlign="left"
    >
      <View
        data-blade-component="card-header"
        style={
          [
            {
              "marginBottom": 12,
            },
          ]
        }
      >
        <View
          data-blade-component="base-box"
          display="flex"
          flexDirection="row"
          justifyContent="space-between"
          style={
            [
              {
                "display": "flex",
                "flexDirection": "row",
                "justifyContent": "space-between",
                "paddingBottom": 12,
              },
            ]
          }
        >
          <View
            data-blade-component="base-box"
            display="flex"
            flexDirection="row"
            style={
              [
                {
                  "display": "flex",
                  "flexBasis": 0,
                  "flexDirection": "row",
                  "flexGrow": 1,
                  "flexShrink": 1,
                },
              ]
            }
          >
            <View
              alignSelf="center"
              data-blade-component="base-box"
              display="flex"
              style={
                [
                  {
                    "alignSelf": "center",
                    "display": "flex",
                    "marginRight": 8,
                  },
                ]
              }
            >
              <RNSVGSvgView
                accessibilityElementsHidden={true}
                align="xMidYMid"
                bbHeight="20px"
                bbWidth="20px"
                data-blade-component="icon"
                fill="none"
                focusable={false}
                height="20px"
                importantForAccessibility="no-hide-descendants"
                meetOrSlice={0}
                minX={0}
                minY={0}
                style={
                  [
                    {
                      "backgroundColor": "transparent",
                      "borderWidth": 0,
                    },
                    [
                      {},
                    ],
                    {
                      "flex": 0,
                      "height": 20,
                      "width": 20,
                    },
                  ]
                }
                vbHeight={24}
                vbWidth={24}
                width="20px"
              >
                <RNSVGGroup
                  fill={null}
                  propList={
                    [
                      "fill",
                    ]
                  }
                >
                  <RNSVGPath
                    d="M12 11C12.5523 11 13 11.4477 13 12V16C13 16.5523 12.5523 17 12 17C11.4477 17 11 16.5523 11 16V12C11 11.4477 11.4477 11 12 11Z"
                    fill={
                      {
                        "payload": 4279838777,
                        "type": 0,
                      }
                    }
                    propList={
                      [
                        "fill",
                      ]
                    }
                  />
                  <RNSVGPath
                    d="M12 7C11.4477 7 11 7.44772 11 8C11 8.55228 11.4477 9 12 9H12.01C12.5623 9 13.01 8.55228 13.01 8C13.01 7.44772 12.5623 7 12.01 7H12Z"
                    fill={
                      {
                        "payload": 4279838777,
                        "type": 0,
                      }
                    }
                    propList={
                      [
                        "fill",
                      ]
                    }
                  />
                  <RNSVGPath
                    clipRule={0}
                    d="M1 12C1 5.92487 5.92487 1 12 1C18.0751 1 23 5.92487 23 12C23 18.0751 18.0751 23 12 23C5.92487 23 1 18.0751 1 12ZM12 3C7.02944 3 3 7.02944 3 12C3 16.9706 7.02944 21 12 21C16.9706 21 21 16.9706 21 12C21 7.02944 16.9706 3 12 3Z"
                    fill={
                      {
                        "payload": 4279838777,
                        "type": 0,
                      }
                    }
                    fillRule={0}
                    propList={
                      [
                        "fill",
                        "fillRule",
                      ]
                    }
                  />
                </RNSVGGroup>
              </RNSVGSvgView>
            </View>
            <View
              data-blade-component="base-box"
              style={
                [
                  {
                    "marginRight": 16,
                  },
                ]
              }
            >
              <View
                alignItems="center"
                data-blade-component="base-box"
                display="flex"
                flexDirection="row"
                flexWrap="wrap"
                style={
                  [
                    {
                      "alignItems": "center",
                      "display": "flex",
                      "flexDirection": "row",
                      "flexWrap": "wrap",
                    },
                  ]
                }
              >
                <Text
                  accessible={true}
                  color="surface.text.gray.normal"
                  data-blade-component="text"
                  fontFamily="text"
                  fontSize={200}
                  fontStyle="normal"
                  fontWeight="semibold"
                  lineHeight={200}
                  style={
                    [
                      {
                        "color": "hsla(212, 39%, 16%, 1)",
                        "fontFamily": "Inter",
                        "fontSize": 16,
                        "fontStyle": "normal",
                        "fontWeight": "600",
                        "letterSpacing": 0,
                        "lineHeight": 24,
                        "marginBottom": 0,
                        "marginLeft": 0,
                        "marginRight": 0,
                        "marginTop": 0,
                        "paddingBottom": 0,
                        "paddingLeft": 0,
                        "paddingRight": 0,
                        "paddingTop": 0,
                        "textDecorationLine": "none",
                      },
                    ]
                  }
                >
                  Card Header
                </Text>
                <View
                  data-blade-component="base-box"
                  style={
                    [
                      {
                        "marginLeft": 8,
                      },
                    ]
                  }
                >
                  <View
                    data-blade-component="counter"
                    display="flex"
                    style={
                      [
                        {
                          "display": "flex",
                        },
                      ]
                    }
                  >
                    <View
                      backgroundColor="feedback.background.neutral.subtle"
                      data-blade-component="base-box"
                      minHeight="20px"
                      platform="onMobile"
                      size="medium"
                      style={
                        [
                          {
                            "backgroundColor": "hsla(211, 20%, 52%, 0.09)",
                            "minHeight": 20,
                          },
                          {
                            "alignSelf": "center",
                            "backgroundColor": "hsla(211, 20%, 52%, 0.09)",
                            "borderRadius": 9999,
                            "display": "flex",
                            "flexWrap": "nowrap",
                            "maxWidth": 100,
                          },
                        ]
                      }
                    >
                      <View
                        alignItems="center"
                        data-blade-component="base-box"
                        display="flex"
                        flexDirection="row"
                        justifyContent="center"
                        overflow="hidden"
                        style={
                          [
                            {
                              "alignItems": "center",
                              "display": "flex",
                              "flexDirection": "row",
                              "justifyContent": "center",
                              "overflow": "hidden",
                              "paddingLeft": 8,
                              "paddingRight": 8,
                            },
                          ]
                        }
                      >
                        <Text
                          accessible={true}
                          color="feedback.text.neutral.intense"
                          data-blade-component="text"
                          fontFamily="text"
                          fontSize={75}
                          fontStyle="normal"
                          fontWeight="medium"
                          lineHeight={75}
                          numberOfLines={1}
                          style={
                            [
                              {
                                "color": "hsla(211, 33%, 21%, 1)",
                                "fontFamily": "Inter",
                                "fontSize": 12,
                                "fontStyle": "normal",
                                "fontWeight": "500",
                                "letterSpacing": 0,
                                "lineHeight": 18,
                                "marginBottom": 0,
                                "marginLeft": 0,
                                "marginRight": 0,
                                "marginTop": 0,
                                "paddingBottom": 0,
                                "paddingLeft": 0,
                                "paddingRight": 0,
                                "paddingTop": 0,
                                "textAlign": "center",
                                "textDecorationLine": "none",
                              },
                            ]
                          }
                          textAlign="center"
                        >
                          12
                        </Text>
                      </View>
                    </View>
                  </View>
                </View>
              </View>
              <Text
                accessible={true}
                color="surface.text.gray.subtle"
                data-blade-component="text"
                fontFamily="text"
                fontSize={75}
                fontStyle="normal"
                fontWeight="regular"
                lineHeight={75}
                style={
                  [
                    {
                      "color": "hsla(211, 26%, 34%, 1)",
                      "fontFamily": "Inter",
                      "fontSize": 12,
                      "fontStyle": "normal",
                      "fontWeight": "400",
                      "letterSpacing": 0,
                      "lineHeight": 18,
                      "marginBottom": 0,
                      "marginLeft": 0,
                      "marginRight": 0,
                      "marginTop": 0,
                      "paddingBottom": 0,
                      "paddingLeft": 0,
                      "paddingRight": 0,
                      "paddingTop": 0,
                      "textAlign": "left",
                      "textDecorationLine": "none",
                    },
                  ]
                }
                textAlign="left"
              >
                Card subtitle
              </Text>
            </View>
          </View>
          <View
            alignSelf="center"
            data-blade-component="base-box"
            style={
              [
                {
                  "alignSelf": "center",
                },
              ]
            }
          >
            <View
              data-blade-component="badge"
              display="flex"
              style={
                [
                  {
                    "display": "flex",
                  },
                ]
              }
            >
              <View
                backgroundColor="feedback.background.neutral.subtle"
                data-blade-component="base-box"
                height="20px"
                size="medium"
                style={
                  [
                    {
                      "backgroundColor": "hsla(211, 20%, 52%, 0.09)",
                      "height": 20,
                      "textAlign": "left",
                    },
                    {
                      "alignSelf": "center",
                      "backgroundColor": "hsla(211, 20%, 52%, 0.09)",
                      "borderRadius": 9999,
                      "display": "flex",
                      "flexWrap": "nowrap",
                    },
                  ]
                }
                textAlign="left"
              >
                <View
                  alignItems="center"
                  data-blade-component="base-box"
                  display="flex"
                  flexDirection="row"
                  justifyContent="center"
                  overflow="hidden"
                  style={
                    [
                      {
                        "alignItems": "center",
                        "display": "flex",
                        "flexDirection": "row",
                        "justifyContent": "center",
                        "overflow": "hidden",
                        "paddingLeft": 8,
                        "paddingRight": 8,
                      },
                    ]
                  }
                >
                  <Text
                    accessible={true}
                    color="feedback.text.neutral.intense"
                    data-blade-component="text"
                    fontFamily="text"
                    fontSize={75}
                    fontStyle="normal"
                    fontWeight="medium"
                    lineHeight={75}
                    numberOfLines={1}
                    style={
                      [
                        {
                          "color": "hsla(211, 33%, 21%, 1)",
                          "fontFamily": "Inter",
                          "fontSize": 12,
                          "fontStyle": "normal",
                          "fontWeight": "500",
                          "letterSpacing": 0,
                          "lineHeight": 18,
                          "marginBottom": 0,
                          "marginLeft": 0,
                          "marginRight": 0,
                          "marginTop": 0,
                          "paddingBottom": 0,
                          "paddingLeft": 0,
                          "paddingRight": 0,
                          "paddingTop": 0,
                          "textDecorationLine": "none",
                        },
                      ]
                    }
                  >
                    NEW
                  </Text>
                </View>
              </View>
            </View>
          </View>
        </View>
        <View
          borderBottomColor="surface.border.gray.muted"
          borderPosition="borderBottom"
          data-blade-component="divider"
          dividerStyle="solid"
          isDividerHorizontal={true}
          style={
            [
              {
                "borderBottomColor": "hsla(211, 20%, 52%, 0.18)",
                "borderBottomStyle": "solid",
              },
              {
                "borderBottomStyle": "solid",
                "borderBottomWidth": 1,
                "borderWidth": 0,
                "flexGrow": 1,
              },
            ]
          }
          thickness="thin"
        />
      </View>
      <View
        data-blade-component="card-body"
        style={
          [
            {},
          ]
        }
      >
        <Text
          accessible={true}
          color="surface.text.gray.normal"
          data-blade-component="text"
          fontFamily="text"
          fontSize={100}
          fontStyle="normal"
          fontWeight="regular"
          lineHeight={100}
          style={
            [
              {
                "color": "hsla(212, 39%, 16%, 1)",
                "fontFamily": "Inter",
                "fontSize": 14,
                "fontStyle": "normal",
                "fontWeight": "400",
                "letterSpacing": 0,
                "lineHeight": 20,
                "marginBottom": 0,
                "marginLeft": 0,
                "marginRight": 0,
                "marginTop": 0,
                "paddingBottom": 0,
                "paddingLeft": 0,
                "paddingRight": 0,
                "paddingTop": 0,
                "textDecorationLine": "none",
              },
            ]
          }
        >
          Plain Card
        </Text>
      </View>
    </View>
  </View>
</View>
`;

exports[`<Card /> should render a Card without 0 padding 1`] = `
<View
  style={
    {
      "flex": 1,
    }
  }
>
  <View
    borderRadius="medium"
    data-blade-component="card"
    display="block"
    isFocused={false}
    isSelected={false}
    style={
      [
        {
          "borderRadius": 4,
          "display": "block",
        },
        {
          "borderColor": "transparent",
          "borderStyle": "solid",
          "borderWidth": 2,
        },
      ]
    }
  >
    <View
      backgroundColor="surface.background.gray.intense"
      borderRadius="medium"
      data-blade-component="base-box"
      elevation="lowRaised"
      style={
        [
          {
            "backgroundColor": "hsla(0, 0%, 100%, 1)",
            "borderRadius": 4,
            "paddingBottom": 0,
            "paddingLeft": 0,
            "paddingRight": 0,
            "paddingTop": 0,
            "textAlign": "left",
          },
          {
            "elevation": 8,
            "shadowColor": "hsla(217, 56%, 17%, 0.4)",
            "shadowOffset": {
              "height": 2,
              "width": 0,
            },
            "shadowOpacity": 0.2,
            "shadowRadius": 4,
          },
          [
            {
              "display": "flex",
              "flexDirection": "column",
              "width": "100%",
            },
          ],
        ]
      }
      textAlign="left"
    >
      <View
        data-blade-component="card-body"
        style={
          [
            {},
          ]
        }
      >
        Plain Card
      </View>
    </View>
  </View>
</View>
`;

exports[`<Card /> should render a border when elevation is \`none\` 1`] = `
<View
  style={
    {
      "flex": 1,
    }
  }
>
  <View
    borderRadius="medium"
    data-blade-component="card"
    display="block"
    isFocused={false}
    isSelected={false}
    style={
      [
        {
          "borderRadius": 4,
          "display": "block",
        },
        {
          "borderColor": "transparent",
          "borderStyle": "solid",
          "borderWidth": 2,
        },
      ]
    }
  >
    <View
      backgroundColor="surface.background.gray.intense"
      borderRadius="medium"
      data-blade-component="base-box"
      elevation="none"
      style={
        [
          {
            "backgroundColor": "hsla(0, 0%, 100%, 1)",
            "borderRadius": 4,
            "paddingBottom": 24,
            "paddingLeft": 24,
            "paddingRight": 24,
            "paddingTop": 24,
            "textAlign": "left",
          },
          {
            "elevation": 0,
            "shadowColor": "",
            "shadowOffset": {
              "height": 0,
              "width": 0,
            },
            "shadowOpacity": 0,
            "shadowRadius": 0,
          },
          [
            {
              "borderColor": "hsla(211, 20%, 52%, 0.18)",
              "borderStyle": "solid",
              "borderWidth": 1,
              "display": "flex",
              "flexDirection": "column",
              "width": "100%",
            },
          ],
        ]
      }
      textAlign="left"
    >
      <View
        data-blade-component="card-body"
        style={
          [
            {},
          ]
        }
      >
        <Text
          accessible={true}
          color="surface.text.gray.normal"
          data-blade-component="text"
          fontFamily="text"
          fontSize={100}
          fontStyle="normal"
          fontWeight="regular"
          lineHeight={100}
          style={
            [
              {
                "color": "hsla(212, 39%, 16%, 1)",
                "fontFamily": "Inter",
                "fontSize": 14,
                "fontStyle": "normal",
                "fontWeight": "400",
                "letterSpacing": 0,
                "lineHeight": 20,
                "marginBottom": 0,
                "marginLeft": 0,
                "marginRight": 0,
                "marginTop": 0,
                "paddingBottom": 0,
                "paddingLeft": 0,
                "paddingRight": 0,
                "paddingTop": 0,
                "textDecorationLine": "none",
              },
            ]
          }
        >
          Plain Card
        </Text>
      </View>
    </View>
  </View>
</View>
`;

exports[`<Card /> should render a plain Card 1`] = `
<View
  style={
    {
      "flex": 1,
    }
  }
>
  <View
    borderRadius="medium"
    data-blade-component="card"
    display="block"
    isFocused={false}
    isSelected={false}
    style={
      [
        {
          "borderRadius": 4,
          "display": "block",
        },
        {
          "borderColor": "transparent",
          "borderStyle": "solid",
          "borderWidth": 2,
        },
      ]
    }
  >
    <View
      backgroundColor="surface.background.gray.moderate"
      borderRadius="medium"
      data-blade-component="base-box"
      elevation="highRaised"
      style={
        [
          {
            "backgroundColor": "hsla(210, 40%, 98%, 1)",
            "borderRadius": 4,
            "paddingBottom": 24,
            "paddingLeft": 24,
            "paddingRight": 24,
            "paddingTop": 24,
            "textAlign": "left",
          },
          {
            "elevation": 24,
            "shadowColor": "hsla(217, 56%, 17%, 0.8)",
            "shadowOffset": {
              "height": 6,
              "width": 0,
            },
            "shadowOpacity": 0.16,
            "shadowRadius": 14,
          },
          [
            {
              "display": "flex",
              "flexDirection": "column",
              "width": "100%",
            },
          ],
        ]
      }
      textAlign="left"
    >
      <View
        data-blade-component="card-body"
        style={
          [
            {},
          ]
        }
      >
        <Text
          accessible={true}
          color="surface.text.gray.normal"
          data-blade-component="text"
          fontFamily="text"
          fontSize={100}
          fontStyle="normal"
          fontWeight="regular"
          lineHeight={100}
          style={
            [
              {
                "color": "hsla(212, 39%, 16%, 1)",
                "fontFamily": "Inter",
                "fontSize": 14,
                "fontStyle": "normal",
                "fontWeight": "400",
                "letterSpacing": 0,
                "lineHeight": 20,
                "marginBottom": 0,
                "marginLeft": 0,
                "marginRight": 0,
                "marginTop": 0,
                "paddingBottom": 0,
                "paddingLeft": 0,
                "paddingRight": 0,
                "paddingTop": 0,
                "textDecorationLine": "none",
              },
            ]
          }
        >
          Plain Card
        </Text>
      </View>
    </View>
  </View>
</View>
`;
